--- a/index.html
+++ b/index.html
@@ -35,7 +35,20 @@
     main{padding:18px 0}
     main .container{display:flex;gap:20px}
 
-    .sidebar{width:260px;background:#fff;border-radius:var(--border-radius);box-shadow:var(--box-shadow);padding:18px;position:sticky;top:78px;height:fit-content}
+    /* NEW: Topics card in the left grey gutter */
+    .topics-left{
+      width:220px;
+      background:#fff;border-radius:var(--border-radius);
+      box-shadow:var(--box-shadow);padding:18px;
+      position:sticky;top:78px;height:fit-content;flex:0 0 auto;
+    }
+    .topics-left h2{font-size:18px;margin-bottom:12px;color:var(--dark-gray)}
+    .topics-list li{padding:8px 0;cursor:pointer;color:#555;transition:color .15s;display:flex;align-items:center;justify-content:space-between}
+    .topics-list li:hover{color:var(--primary-color)}
+    .topics-list li.active{color:var(--primary-color);font-weight:500}
+
+    /* Your existing Filters card (unchanged) */
+    .sidebar{width:260px;background:#fff;border-radius:var(--border-radius);box-shadow:var(--box-shadow);padding:18px;position:sticky;top:78px;height:fit-content;flex:0 0 auto}
     .filter-section{margin-bottom:22px}
     .filter-section h2{font-size:18px;margin-bottom:12px;color:var(--dark-gray)}
     .filter-section h3{font-size:14px;margin:12px 0 8px;color:var(--dark-gray)}
@@ -43,21 +56,32 @@
     .toggle-row{display:flex;align-items:center;gap:10px;font-size:14px;margin-top:8px}
     .toggle-row input{transform:translateY(1px)}
 
+    /* Bias chips (unchanged) */
     .bias-filter{display:flex;justify-content:space-between;align-items:center;gap:8px}
     .bias-option{display:flex;flex-direction:column;align-items:center;cursor:pointer}
     .bias-circle{width:22px;height:22px;border-radius:50%;margin-bottom:6px;transition:transform .2s}
+    .bias-option small{font-size:13px;font-weight:600;color:#444}
     .bias-option:hover .bias-circle{transform:scale(1.15)}
     .bias-option.active .bias-circle{outline:2px solid #000;outline-offset:2px}
     .left-bias{background:var(--left-color)} .center-left-bias{background:var(--center-left-color)}
     .center-bias{background:var(--center-color)} .center-right-bias{background:var(--center-right-color)}
     .right-bias{background:var(--right-color)}
 
-    .slider{width:100%;height:5px;background:linear-gradient(to right,#7e57c2,#27AE60,#ffeb3b);outline:none;-webkit-appearance:none;border-radius:5px}
-    .slider::-webkit-slider-thumb{-webkit-appearance:none;width:18px;height:18px;background:#fff;border:2px solid var(--primary-color);border-radius:50%;cursor:pointer}
-    .slider-labels{display:flex;justify-content:space-between;margin-top:6px;font-size:12px;color:#666}
-
-    .topics-list li{padding:8px 0;cursor:pointer;color:#555;transition:color .15s;display:flex;align-items:center;justify-content:space-between}
-    .topics-list li:hover{color:var(--primary-color)} .topics-list li.active{color:var(--primary-color);font-weight:500}
+    /* Spectrumeter */
+    .spectrumeter{background:#fff;border-radius:var(--border-radius);box-shadow:var(--box-shadow);padding:12px}
+    .spec-row{display:flex;flex-direction:column;gap:10px}
+    .spec-svg{width:100%;height:120px}
+    /* MATCH bias label style here ONLY */
+    .spec-ticks text{font-size:13px;font-weight:600;fill:#444}
+    .see-more{align-self:flex-start;background:#f0f6ff;color:#2054d2;padding:6px 8px;border-radius:8px;font-weight:600}
+    .spec-details{display:none;margin-top:8px}
+    .spec-details.open{display:block}
+    .bar{height:8px;border-radius:6px;background:#eee;overflow:hidden}
+    .bar > span{display:block;height:100%}
+    .bar-left{background:var(--left-color)} .bar-lean-left{background:var(--center-left-color)}
+    .bar-center{background:var(--center-color)} .bar-lean-right{background:var(--center-right-color)}
+    .bar-right{background:var(--right-color)} .bar-unknown{background:#bbb}
+    .spec-grid{display:grid;grid-template-columns:88px 1fr 38px;gap:6px;align-items:center;font-size:12px}
 
     .content{flex:1;min-width:0}
     .status-bar{display:flex;flex-wrap:wrap;gap:10px;align-items:center;justify-content:space-between;background:#fff;border-radius:var(--border-radius);box-shadow:var(--box-shadow);padding:10px 14px;margin-bottom:14px;font-size:13px;color:#666}
@@ -69,22 +93,6 @@
     .view-options{display:flex;background:#fff;border-radius:var(--border-radius);box-shadow:var(--box-shadow);overflow:hidden;margin-bottom:16px}
     .view-option{padding:10px 16px;font-weight:500;transition:background-color .15s;flex:0 0 auto}
     .view-option:hover{background:var(--light-gray)} .view-option.active{background:var(--primary-color);color:#fff}
-
-    /* Spectrumeter (sidebar) */
-    .spectrumeter{background:#fff;border-radius:var(--border-radius);box-shadow:var(--box-shadow);padding:12px}
-    .spec-row{display:flex;flex-direction:column;gap:10px}
-    .spec-svg{width:100%;height:120px}
-    /* CSS transform is not used for the needle anymore (we rotate via SVG attribute) */
-    .see-more{align-self:flex-start;background:#f0f6ff;color:#2054d2;padding:6px 8px;border-radius:8px;font-weight:600}
-
-    .spec-details{display:none;margin-top:8px}
-    .spec-details.open{display:block}
-    .bar{height:8px;border-radius:6px;background:#eee;overflow:hidden}
-    .bar > span{display:block;height:100%}
-    .bar-left{background:var(--left-color)} .bar-lean-left{background:var(--center-left-color)}
-    .bar-center{background:var(--center-color)} .bar-lean-right{background:var(--center-right-color)}
-    .bar-right{background:var(--right-color)} .bar-unknown{background:#bbb}
-    .spec-grid{display:grid;grid-template-columns:88px 1fr 38px;gap:6px;align-items:center;font-size:12px}
 
     #news-container{display:grid;grid-template-columns:1fr;gap:18px;align-items:stretch}
     .cards-2 #news-container{grid-template-columns:repeat(2,1fr)}
@@ -132,7 +140,8 @@
     footer{background:#333;color:#fff;padding:20px 0;margin-top:28px}
     footer .container{display:flex;justify-content:space-between;align-items:center;font-size:13px;opacity:.9}
 
-    @media (max-width:1024px){.cards-3 #news-container{grid-template-columns:repeat(2,1fr)}}
+    /* Responsive: hide Topics card on smaller screens so layout stays your original stack */
+    @media (max-width:1024px){ .topics-left{display:none} .cards-3 #news-container{grid-template-columns:repeat(2,1fr)} }
     @media (max-width:900px){
       main .container{flex-direction:column}
       .sidebar{width:100%;position:static;order:2}
@@ -165,7 +174,24 @@
 
   <main>
     <div class="container">
-      <!-- Sidebar -->
+
+      <!-- NEW: Topics card placed to the far left (in the grey gutter) -->
+      <aside class="topics-left">
+        <h2>Topics</h2>
+        <ul class="topics-list" id="topics-left">
+          <li class="active" data-category="">All</li>
+          <li data-category="general">General</li>
+          <li data-category="world">World</li>
+          <li data-category="business">Business</li>
+          <li data-category="technology">Technology</li>
+          <li data-category="entertainment">Entertainment</li>
+          <li data-category="sports">Sports</li>
+          <li data-category="science">Science</li>
+          <li data-category="health">Health</li>
+        </ul>
+      </aside>
+
+      <!-- Your original Filters card (unchanged) -->
       <aside class="sidebar">
         <section class="filter-section">
           <h2>Filters</h2>
@@ -224,22 +250,23 @@
                     <stop offset="100%" stop-color="#e94b4b"/>
                   </linearGradient>
                 </defs>
-                <!-- Arc lifted to y=92 -->
+
+                <!-- Arc lifted to avoid overlap with labels -->
                 <path d="M20,92 A90,90 0 0,1 200,92" fill="none" stroke="#eee" stroke-width="16" stroke-linecap="round"/>
                 <path d="M20,92 A90,90 0 0,1 200,92" fill="none" stroke="url(#specGradient)" stroke-width="16" stroke-linecap="round"/>
-                <!-- Labels -->
-                <g font-size="10" fill="#666" text-anchor="middle">
+
+                <!-- Ticks styled EXACTLY like bias labels -->
+                <g class="spec-ticks" text-anchor="middle">
                   <text x="32"  y="116">Left</text>
                   <text x="76"  y="116">CL</text>
                   <text x="110" y="116">Center</text>
                   <text x="144" y="116">CR</text>
                   <text x="188" y="116">Right</text>
                 </g>
-                <!-- Needle pivot at (110,92). We'll rotate this <g> with an SVG transform attribute -->
+
+                <!-- Needle pivot at (110,92) -->
                 <g id="spec-needle">
-                  <!-- pivot disc -->
                   <circle cx="110" cy="92" r="6" fill="#444"/>
-                  <!-- needle arm pointing to the right at 0°; rotation will pivot around 110,92 -->
                   <line x1="110" y1="92" x2="170" y2="78" stroke="#444" stroke-width="2" stroke-linecap="round"/>
                 </g>
               </svg>
@@ -275,21 +302,6 @@
             <input type="checkbox" id="cluster-toggle" checked />
             <span>Cluster similar stories</span>
           </label>
-        </section>
-
-        <section class="filter-section">
-          <h2>Topics</h2>
-          <ul class="topics-list" id="topics">
-            <li class="active" data-category="">All</li>
-            <li data-category="general">General</li>
-            <li data-category="world">World</li>
-            <li data-category="business">Business</li>
-            <li data-category="technology">Technology</li>
-            <li data-category="entertainment">Entertainment</li>
-            <li data-category="sports">Sports</li>
-            <li data-category="science">Science</li>
-            <li data-category="health">Health</li>
-          </ul>
         </section>
       </aside>
 
@@ -346,13 +358,17 @@
         document.getElementById('balanced-toggle').addEventListener('change',()=>this.debouncedLoadNews());
         document.getElementById('cluster-toggle').addEventListener('change',()=>this.debouncedLoadNews());
 
-        document.querySelectorAll('#topics li').forEach(li=>{
+        // NEW: topics list in the left card
+        document.querySelectorAll('#topics-left li').forEach(li=>{
           li.addEventListener('click',()=>{
-            document.querySelectorAll('#topics li').forEach(x=>x.classList.remove('active'));
-            li.classList.add('active'); this.currentCategory=li.dataset.category||''; this.debouncedLoadNews();
+            document.querySelectorAll('#topics-left li').forEach(x=>x.classList.remove('active'));
+            li.classList.add('active');
+            this.currentCategory=li.dataset.category||'';
+            this.debouncedLoadNews();
           });
         });
 
+        // Bias buttons
         document.querySelectorAll('#bias-filter .bias-option').forEach(opt=>{
           opt.addEventListener('click',()=>{
             document.querySelectorAll('#bias-filter .bias-option').forEach(x=>{x.classList.remove('active');x.setAttribute('aria-pressed','false')});
@@ -361,6 +377,7 @@
           });
         });
 
+        // View options (instant)
         const viewBtns=document.querySelectorAll('.view-option');
         viewBtns.forEach(btn=>{
           btn.addEventListener('click',()=>{
@@ -371,8 +388,8 @@
             if(mode==='1') this.viewRoot.classList.add('cards-1');
             else if(mode==='2') this.viewRoot.classList.add('cards-2');
             else if(mode==='3') this.viewRoot.classList.add('cards-3');
-            else if(mode==='lr') this.viewRoot.classList.add('cards-2'); // use 2-up grid
-            this.renderArticles(this.lastArticles); // instant reflow (no refetch)
+            else if(mode==='lr') this.viewRoot.classList.add('cards-2'); // 2-up grid for L/R
+            this.renderArticles(this.lastArticles); // no extra fetch
           });
         });
 
@@ -482,45 +499,33 @@
         const counts={left:0,'lean-left':0,center:0,'lean-right':0,right:0,unknown:0};
         for(const a of (articles||[])){ counts[a.bias] != null ? counts[a.bias]++ : counts.unknown++; }
 
-        // Use only labeled articles to compute direction (ignore Unknown)
         const labeledTotal = buckets.reduce((s,b)=>s+counts[b],0);
-
-        // target angle is a weighted average across buckets, not just the mode
-        // positions mapped across the semicircle Left(-180) .. Right(0)
         const pos = { left:-180, 'lean-left':-135, center:-90, 'lean-right':-45, right:0 };
-
-        let angle = -90; // default Center
+        let angle = -90;
         if(labeledTotal > 0){
-          let sum = 0;
-          for(const b of buckets) sum += (counts[b] / labeledTotal) * pos[b];
-          angle = sum;
+          let sum = 0; for(const b of buckets) sum += (counts[b]/labeledTotal) * pos[b]; angle = sum;
         }
 
-        // Smoothly animate to new angle (lightweight tween)
         const needleEl = document.getElementById('spec-needle');
         if(needleEl){
           const prev = parseFloat(needleEl.dataset.angle || '-90');
-          const steps = 12, duration = 180; // ~180ms
-          let t = 0;
+          const duration = 180;
           const start = performance.now();
           const animate = (now)=>{
             const p = Math.min(1,(now-start)/duration);
             const a = prev + (angle - prev) * p;
             needleEl.setAttribute('transform', `rotate(${a} 110 92)`);
-            if(p < 1) requestAnimationFrame(animate);
-            else needleEl.dataset.angle = String(angle);
+            if(p<1) requestAnimationFrame(animate); else needleEl.dataset.angle=String(angle);
           };
           requestAnimationFrame(animate);
         }
 
-        // Details bars
         const total = (articles||[]).length || 1;
         const bars=document.getElementById('spec-bars');
         const mkRow=(name,cls,p)=>`
           <div>${name}</div>
           <div class="bar"><span class="${cls}" style="width:${p}%;"></span></div>
-          <div style="text-align:right">${p}%</div>
-        `;
+          <div style="text-align:right">${p}%</div>`;
         const pct=v=>Math.round((v/total)*100);
         bars.innerHTML =
           mkRow('Left','bar-left',pct(counts.left))+
