--- a/index.html
+++ b/index.html
@@ -74,14 +74,12 @@
     .spectrumeter{background:#fff;border-radius:var(--border-radius);box-shadow:var(--box-shadow);padding:12px}
     .spec-row{display:flex;flex-direction:column;gap:10px}
     .spec-svg{width:100%;height:120px}
-    /* Spectrumeter tick labels: match Bias labels (small text under circles) */
     .spectrumeter .spec-ticks{
       font-family: inherit;
-      font-size: 12px;        /* align with small bias labels */
-      font-weight: 400;       /* same weight as the bias labels */
-      fill: var(--text-color);/* same color baseline */
+      font-size: 12px;
+      font-weight: 400;
+      fill: var(--text-color);
     }
-    /* CSS transform is not used for the needle anymore (we rotate via SVG attribute) */
     .see-more{align-self:flex-start;background:#f0f6ff;color:#2054d2;padding:6px 8px;border-radius:8px;font-weight:600}
 
     .spec-details{display:none;margin-top:8px}
@@ -96,6 +94,11 @@
     #news-container{display:grid;grid-template-columns:1fr;gap:18px;align-items:stretch}
     .cards-2 #news-container{grid-template-columns:repeat(2,1fr)}
     .cards-3 #news-container{grid-template-columns:repeat(3,1fr)}
+
+    /* Dedicated Left vs Right layout */
+    .lr-grid{display:grid;grid-template-columns:1fr 1fr;gap:18px}
+    .lr-col{display:flex;flex-direction:column;gap:18px}
+    @media (max-width:900px){ .lr-grid{grid-template-columns:1fr} }
 
     .article-card{background:#fff;border-radius:var(--border-radius);box-shadow:var(--box-shadow);overflow:hidden;transition:transform .18s ease,box-shadow .18s ease;content-visibility:auto;contain-intrinsic-size:600px;display:flex;flex-direction:column;height:100%}
     .article-card:hover{transform:translateY(-4px);box-shadow:0 8px 22px rgba(0,0,0,.08)}
@@ -156,12 +159,12 @@
   </style>
 </head>
 
-<body class="cards-3">
+<body class="cards-2">
   <header>
     <div class="container">
       <div class="logo"><h1>Spectrum <span>News</span></h1></div>
 
-    <div class="search-bar">
+      <div class="search-bar">
         <form id="search-form" class="search-form" autocomplete="off">
           <input id="search-input" type="text" placeholder="Search news…" value="latest news" />
           <button class="search-btn" type="submit">Search</button>
@@ -233,7 +236,6 @@
                 </defs>
                 <path d="M20,92 A90,90 0 0,1 200,92" fill="none" stroke="#eee" stroke-width="16" stroke-linecap="round"/>
                 <path d="M20,92 A90,90 0 0,1 200,92" fill="none" stroke="url(#specGradient)" stroke-width="16" stroke-linecap="round"/>
-                <!-- Labels -->
                 <g class="spec-ticks" text-anchor="middle">
                   <text x="32"  y="116">Left</text>
                   <text x="76"  y="116">CL</text>
@@ -241,7 +243,6 @@
                   <text x="144" y="116">CR</text>
                   <text x="188" y="116">Right</text>
                 </g>
-                <!-- Needle -->
                 <g id="spec-needle">
                   <circle cx="110" cy="92" r="6" fill="#444"/>
                   <line x1="110" y1="92" x2="170" y2="78" stroke="#444" stroke-width="2" stroke-linecap="round"/>
@@ -346,7 +347,7 @@
 
         document.getElementById('search-form').addEventListener('submit',e=>{e.preventDefault();this.loadNews()});
         ['max-select','time-range'].forEach(id=>document.getElementById(id).addEventListener('change',()=>this.debouncedLoadNews()));
-        document.getElementById('reliability').addEventListener('change',()=>this.debouncedLoadNews());
+        document.getElementById('reliability').addEventListener('input',()=>this.debouncedLoadNews());
         document.getElementById('balanced-toggle').addEventListener('change',()=>this.debouncedLoadNews());
         document.getElementById('cluster-toggle').addEventListener('change',()=>this.debouncedLoadNews());
 
@@ -381,7 +382,6 @@
           });
         });
 
-        // Spectrumeter toggle
         const toggle=document.getElementById('spec-toggle');
         const details=document.getElementById('spec-details');
         toggle.addEventListener('click',()=>{
@@ -411,16 +411,10 @@
           const params=new URLSearchParams({ q, lang, max, expand:'content' });
           if(this.currentCategory) params.set('category', this.currentCategory);
 
-          // --- CHANGE #3: bias vs balanced handling ---
           const bias = this.currentBias || 'default';
-          if (bias !== 'default') {
-            params.set('bias', bias);
-          }
+          if (bias !== 'default') params.set('bias', bias);
           const balancedEl = document.getElementById('balanced-toggle');
-          if (bias === 'default' && balancedEl.checked) {
-            params.set('balanced','1');
-          }
-          // ------------------------------------------
+          if (bias === 'default' && balancedEl.checked) params.set('balanced','1');
 
           const tr=document.getElementById('time-range').value;
           if(tr!=='any'){
@@ -430,7 +424,9 @@
 
           const minReliability=parseInt(document.getElementById('reliability').value,10)||0;
           if(minReliability>0) params.set('minReliability', String(minReliability));
-          if(document.getElementById('cluster-toggle').checked) params.set('cluster','title');
+
+          // NEW: use improved semantic clustering
+          if(document.getElementById('cluster-toggle').checked) params.set('cluster','smart');
 
           const res=await fetch(`${this.apiEndpoint}?${params.toString()}`);
           if(!res.ok) throw new Error(`HTTP ${res.status} ${res.statusText}`);
@@ -472,12 +468,13 @@
         const maxSel=parseInt(document.getElementById('max-select').value,10)||10;
         const perSide=Math.max(1, Math.floor(maxSel/2));
         const L=leftPool.slice(0,perSide); const R=rightPool.slice(0,perSide);
-        const pairs=Math.min(L.length,R.length);
-        const html=[];
-        for(let i=0;i<pairs;i++){ html.push(this.cardHTML(L[i])); html.push(this.cardHTML(R[i])); }
-        for(let i=pairs;i<L.length;i++) html.push(this.cardHTML(L[i]));
-        for(let i=pairs;i<R.length;i++) html.push(this.cardHTML(R[i]));
-        el.innerHTML=html.join('');
+
+        el.innerHTML = `
+          <div class="lr-grid">
+            <div class="lr-col lr-left">${L.map(a=>this.cardHTML(a)).join('')}</div>
+            <div class="lr-col lr-right">${R.map(a=>this.cardHTML(a)).join('')}</div>
+          </div>
+        `;
         const firstImg=el.querySelector('.thumb'); if(firstImg){ firstImg.loading='eager'; firstImg.setAttribute('fetchpriority','high'); }
         this.attachCardHandlers(el);
       }
@@ -497,9 +494,7 @@
         for(const a of (articles||[])){ counts[a.bias] != null ? counts[a.bias]++ : counts.unknown++; }
 
         const labeledTotal = buckets.reduce((s,b)=>s+counts[b],0);
-
         const pos = { left:-180, 'lean-left':-135, center:-90, 'lean-right':-45, right:0 };
-
         let angle = -90;
         if(labeledTotal > 0){
           let sum = 0;
@@ -522,21 +517,28 @@
           requestAnimationFrame(animate);
         }
 
-        const total = (articles||[]).length || 1;
+        const totalCount = (articles||[]).length || 1;
+        const pctRaw = v => (v/totalCount)*100;
+        const fmt = x => Math.round(x);
+
+        const rows = [
+          ['Left','bar-left', counts.left],
+          ['Center Left','bar-lean-left', counts['lean-left']],
+          ['Center','bar-center', counts.center],
+          ['Center Right','bar-lean-right', counts['lean-right']],
+          ['Right','bar-right', counts.right],
+          ...(counts.unknown ? [['Unknown','bar-unknown', counts.unknown]] : [])
+        ];
+
         const bars=document.getElementById('spec-bars');
-        const mkRow=(name,cls,p)=>`
-          <div>${name}</div>
-          <div class="bar"><span class="${cls}" style="width:${p}%;"></span></div>
-          <div style="text-align:right">${p}%</div>
-        `;
-        const pct=v=>Math.round((v/total)*100);
-        bars.innerHTML =
-          mkRow('Left','bar-left',pct(counts.left))+
-          mkRow('Center Left','bar-lean-left',pct(counts['lean-left']))+
-          mkRow('Center','bar-center',pct(counts.center))+
-          mkRow('Center Right','bar-lean-right',pct(counts['lean-right']))+
-          mkRow('Right','bar-right',pct(counts.right))+
-          (counts.unknown ? mkRow('Unknown','bar-unknown',pct(counts.unknown)) : '');
+        bars.innerHTML = rows.map(([label, cls, c])=>{
+          const p = Math.max(0, Math.min(100, fmt(pctRaw(c))));
+          return `
+            <div>${label}</div>
+            <div class="bar"><span class="${cls}" style="width:${p}%;"></span></div>
+            <div style="text-align:right">${p}%</div>
+          `;
+        }).join('');
       }
 
       /* ===== Cards ===== */
